--- a/examples/widget-webcomponent/index.html
+++ b/examples/widget-webcomponent/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="/src/assets/index.js"></script>
   </body>
 </html>
