--- a/examples/widget-webcomponent/index.html
+++ b/examples/widget-webcomponent/index.html
@@ -7,7 +7,9 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <button id="trigger">open</button>
+    </div>
     <script type="module" src="/src/assets/index.js"></script>
   </body>
 </html>
