full example with networks

--- a/examples/widget-webcomponent/index.html
+++ b/examples/widget-webcomponent/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root">
-      <button id="trigger">open</button>
+      <button id="trigger">Open</button>
     </div>
     <script type="module" src="/src/assets/index.js"></script>
   </body>
